--- a/frontend/html/code/layout.html
+++ b/frontend/html/code/layout.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Linux Library</title>
 </head>
 <body>
     <div style="width: 100%; height: 100%; background-color: black; text-align: center;">
