--- a/frontend/html/code/layout.html
+++ b/frontend/html/code/layout.html
@@ -10,15 +10,17 @@
     <div style="width: 100%; height: 100%; background-color: black; text-align: center;">
         <img src="images/logo.jpg" alt="">
         <br>
-        <button style="width: 150px; height: 50px; background-color: green; color: white;">Sample</button>
-        <button style="width: 150px; height: 50px; background-color: green; color: white;">Sample</button>
-        <button style="width: 150px; height: 50px; background-color: green; color: white;">Sample</button>
-        <button style="width: 150px; height: 50px; background-color: green; color: white;">Sample</button>
-        <button style="width: 150px; height: 50px; background-color: green; color: white;">Sample</button>
+        <nav>
+            <button style="width: 150px; height: 50px; background-color: green; color: white;">Sample</button>
+            <button style="width: 150px; height: 50px; background-color: green; color: white;">Sample</button>
+            <button style="width: 150px; height: 50px; background-color: green; color: white;">Sample</button>
+            <button style="width: 150px; height: 50px; background-color: green; color: white;">Sample</button>
+            <button style="width: 150px; height: 50px; background-color: green; color: white;">Sample</button>
+        </nav>
     </div>
     <div style="width: 100%; height: 100%; text-align: center;">
         <br>
-        <img src="images/s1.png" alt="">
+        <img src="images/s1.png" alt="" width="100%">
     </div>
     <div style="width: 100%; height: 100%; background-color: lightcoral; text-align: center;">
         <h1>Welcome to Software Training Company</h1>
