Added code for article in revision

--- a/frontend/html/practice/revision/05article_aside.html
+++ b/frontend/html/practice/revision/05article_aside.html
@@ -192,7 +192,7 @@
             </article>
         </section>
     </main>
-    <footer style="width: 100%; height: 100%; background-color: black; color: white;">
+    <footer style="width: 100%; height: 100%; background-color: black; color: white; text-align: center;">
         <p>Designed and developed by Arjun</p>
     </footer>
 </body>
